[tool.poetry]
name = "tsetmc-api"
version = "5.0.0"
description = "simple package to communicate and crawl data from tsetmc.com (Tehran Stock Exchange Website)"
authors = ["Mahdi Sadeghi <mail2mahsad@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"
lxml = "^4.9.1"
python-dateutil = "^2.8.2"
jdatetime = "^4.1.0"
schedule = "^1.1.0"
pydantic = "^1.10.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
